--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,39 +30,35 @@
   <div class="outer">
     <div class="grid-item">
       <app-meeting meetingUrl="https://us02web.zoom.us/j/86454224631?pwd=cGtPL2NacVlCZ2FtU1YvTWtDSUVZUT09" picture="./assets/Sacrament.jpg"
-      title="Sacrament" info="Sunday at 9:00 am" validate=true></app-meeting>
-    </div>
-    <div class="grid-item">
-      <app-meeting meetingUrl="https://greenmeadowschristmas.weebly.com/" picture="./assets/christmas.jpg"
-      title="Christmas Activity" info=""></app-meeting>
+      title="Sacrament" info="Sunday at 10:30 am" validate=true></app-meeting>
     </div>
     <div class="grid-item">
       <app-meeting meetingUrl="https://www.facebook.com/groups/3194141400809957" picture="./assets/primary.jpg"
       title="Primary" info=""></app-meeting>
     </div>
     <div class="grid-item">
-      <app-meeting meetingUrl="https://us04web.zoom.us/j/72925123515?pwd=SE1TODdKNkxtTVdWeWpPRUREeit4QT09" picture="./assets/EldersQuorum.jpeg"
-      title="Elder's Quorum" info="Every 2nd/4th Sunday at 11:00 am" validate=true></app-meeting>
+      <app-meeting meetingUrl="https://us04web.zoom.us/j/75887389937?pwd=SHJ2NloyU2RPMGp5UFRRYjR6UUlKdz09" picture="./assets/EldersQuorum.jpeg"
+      title="Elder's Quorum" info="Every 2nd/4th Sunday at 11:45 am" validate=true></app-meeting>
     </div>
     <div class="grid-item">
       <app-meeting meetingUrl="https://us04web.zoom.us/j/78550170015?pwd=eGRMd3NINThjNVRUZ0hYM1kvSUM3QT09" picture="./assets/ReliefSociety.jpg"
-      title="Relief Society" info="Every 2nd/4th Sunday at 11:30 am" validate=true></app-meeting>
+      title="Relief Society" info="Every 2nd/4th Sunday at 12:30 pm" validate=true></app-meeting>
     </div>
     <div class="grid-item">
-      <app-meeting meetingUrl="https://us04web.zoom.us/j/71226414731?pwd=QXMxMnRuZW4raS9iZkhQTE5pdHpRQT09" picture="./assets/YoungWomen.jpg"
-      title="Young Women" info="Every 2nd/4th Sunday at 11:30 am" validate=true></app-meeting>
+      <app-meeting meetingUrl="https://us04web.zoom.us/j/7797654280?pwd=d1R6WGsvQjY1UmdOOG5KVUR3R1NBZz09" picture="./assets/YoungWomen.jpg"
+      title="Young Women" info="Every 2nd/4th Sunday at 12:30 pm" validate=true></app-meeting>
     </div>
     <div class="grid-item">
-      <app-meeting meetingUrl="https://us02web.zoom.us/j/84288966786?pwd=RUlEYkxhMnphdzRQYUZxTHNUZUNMZz09" picture="./assets/YoungMen.webp"
-      title="Young Men" info="Every 2nd/4th Sunday at 11:00 am" validate=true></app-meeting>
+      <app-meeting meetingUrl="https://us05web.zoom.us/j/83415440647?pwd=U05wdFdTUnBONm9vSHlKRTFrZFBadz09" picture="./assets/YoungMen.webp"
+      title="Young Men" info="Every 2nd/4th Sunday at 11:45 am" validate=true></app-meeting>
     </div>
     <div class="grid-item">
       <app-meeting meetingUrl="https://us05web.zoom.us/j/81804316212?pwd=bkFTVkR2WllvQUppQWNubGVIYzRNZz09" picture="./assets/YouthSundaySchool.jpeg"
-      title="Youth Sunday School" info="Every 1st/3rd Sunday at 11:00 am" validate=true></app-meeting>
+      title="Youth Sunday School" info="Every 1st/3rd Sunday at 11:45 am" validate=true></app-meeting>
     </div>
     <div class="grid-item">
       <app-meeting meetingUrl="https://us04web.zoom.us/j/72986219322?pwd=SWJwZDhZOHlnU0NaOGNXTDBMbWtVQT09" picture="./assets/GospelDoctrine.jpg"
-      title="Gospel Doctrine" info="Every 1st/3rd Sunday at 11:30 am" validate=true></app-meeting>
+      title="Gospel Doctrine" info="Every 1st/3rd Sunday at 12:30 pm" validate=true></app-meeting>
     </div>
   </div>
 </div>
