--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,5 +60,6 @@
       <app-meeting meetingUrl="https://us04web.zoom.us/j/72986219322?pwd=SWJwZDhZOHlnU0NaOGNXTDBMbWtVQT09" picture="./assets/GospelDoctrine.jpg"
       title="Gospel Doctrine" info="Every 1st/3rd Sunday at 12:30 pm" validate=true></app-meeting>
     </div>
+    <app-activities></app-activities>
   </div>
 </div>
